dist~/LogoTomaParser.py
# Generated from LogoToma.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LogoTomaParser ( Parser ):

    grammarFileName = "LogoToma.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'engine'", "'on'", "'off'", "'wheel'", 
                     "'right'", "'left'", "'spray'", "'spray color'", "'spray size'", 
                     "'sleep'", "'hide'", "'cast'", "'->'", "'print'", "'='", 
                     "'save'", "'('", "','", "')'", "'bool'", "'color'", 
                     "'int'", "'float'", "'string'", "'void'", "'loop'", 
                     "'times'", "'loop while'", "'if'", "'else'", "'{'", 
                     "'}'", "'return'", "'pattern'", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOL", "IDENTIFIER", "SIGN_OPERATORS", "NUMBER", 
                      "MULTIPLYING_OPERATORS", "SUM_OPERATORS", "NEGATION_OPERATOR", 
                      "LOGIC_OPERATORS", "COMPARISON_OPERATORS", "STRING", 
                      "EOL", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_line = 1
    RULE_command = 2
    RULE_value = 3
    RULE_engine = 4
    RULE_wheel = 5
    RULE_spray = 6
    RULE_spray_color = 7
    RULE_spray_size = 8
    RULE_sleep = 9
    RULE_hide = 10
    RULE_cast = 11
    RULE_print = 12
    RULE_object = 13
    RULE_assign = 14
    RULE_bool = 15
    RULE_deref = 16
    RULE_save = 17
    RULE_color = 18
    RULE_type_name = 19
    RULE_loope = 20
    RULE_whilee = 21
    RULE_ife = 22
    RULE_elsee = 23
    RULE_signExpression = 24
    RULE_multiplyingExpression = 25
    RULE_logicBit = 26
    RULE_expression = 27
    RULE_comparisonExpression = 28
    RULE_logic_expression = 29
    RULE_block = 30
    RULE_statement = 31
    RULE_function = 32
    RULE_f_call = 33
    RULE_comment = 34
    RULE_identifier = 35
    RULE_integer = 36
    RULE_floate = 37
    RULE_string = 38

    ruleNames =  [ "program", "line", "command", "value", "engine", "wheel", 
                   "spray", "spray_color", "spray_size", "sleep", "hide", 
                   "cast", "print", "object", "assign", "bool", "deref", 
                   "save", "color", "type_name", "loope", "whilee", "ife", 
                   "elsee", "signExpression", "multiplyingExpression", "logicBit", 
                   "expression", "comparisonExpression", "logic_expression", 
                   "block", "statement", "function", "f_call", "comment", 
                   "identifier", "integer", "floate", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    BOOL=36
    IDENTIFIER=37
    SIGN_OPERATORS=38
    NUMBER=39
    MULTIPLYING_OPERATORS=40
    SUM_OPERATORS=41
    NEGATION_OPERATOR=42
    LOGIC_OPERATORS=43
    COMPARISON_OPERATORS=44
    STRING=45
    EOL=46
    COMMENT=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LogoTomaParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LogoTomaParser.LineContext)
            else:
                return self.getTypedRuleContext(LogoTomaParser.LineContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(LogoTomaParser.EOL)
            else:
                return self.getToken(LogoTomaParser.EOL, i)

        def getRuleIndex(self):
            return LogoTomaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LogoTomaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LogoTomaParser.T__0) | (1 << LogoTomaParser.T__3) | (1 << LogoTomaParser.T__6) | (1 << LogoTomaParser.T__7) | (1 << LogoTomaParser.T__8) | (1 << LogoTomaParser.T__9) | (1 << LogoTomaParser.T__10) | (1 << LogoTomaParser.T__11) | (1 << LogoTomaParser.T__13) | (1 << LogoTomaParser.T__15) | (1 << LogoTomaParser.T__16) | (1 << LogoTomaParser.T__19) | (1 << LogoTomaParser.T__20) | (1 << LogoTomaParser.T__21) | (1 << LogoTomaParser.T__22) | (1 << LogoTomaParser.T__23) | (1 << LogoTomaParser.T__24) | (1 << LogoTomaParser.T__25) | (1 << LogoTomaParser.T__27) | (1 << LogoTomaParser.T__28) | (1 << LogoTomaParser.BOOL) | (1 << LogoTomaParser.IDENTIFIER) | (1 << LogoTomaParser.SIGN_OPERATORS) | (1 << LogoTomaParser.NUMBER) | (1 << LogoTomaParser.NEGATION_OPERATOR) | (1 << LogoTomaParser.STRING) | (1 << LogoTomaParser.COMMENT))) != 0):
                        self.state = 78
                        self.line()


                    self.state = 82 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 81
                            self.match(LogoTomaParser.EOL)

                        else:
                            raise NoViableAltException(self)
                        self.state = 84 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,1,self._ctx)


                else:
                    raise NoViableAltException(self)
                self.state = 88 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LogoTomaParser.T__0) | (1 << LogoTomaParser.T__3) | (1 << LogoTomaParser.T__6) | (1 << LogoTomaParser.T__7) | (1 << LogoTomaParser.T__8) | (1 << LogoTomaParser.T__9) | (1 << LogoTomaParser.T__10) | (1 << LogoTomaParser.T__11) | (1 << LogoTomaParser.T__13) | (1 << LogoTomaParser.T__15) | (1 << LogoTomaParser.T__16) | (1 << LogoTomaParser.T__19) | (1 << LogoTomaParser.T__20) | (1 << LogoTomaParser.T__21) | (1 << LogoTomaParser.T__22) | (1 << LogoTomaParser.T__23) | (1 << LogoTomaParser.T__24) | (1 << LogoTomaParser.T__25) | (1 << LogoTomaParser.T__27) | (1 << LogoTomaParser.T__28) | (1 << LogoTomaParser.BOOL) | (1 << LogoTomaParser.IDENTIFIER) | (1 << LogoTomaParser.SIGN_OPERATORS) | (1 << LogoTomaParser.NUMBER) | (1 << LogoTomaParser.NEGATION_OPERATOR) | (1 << LogoTomaParser.STRING) | (1 << LogoTomaParser.COMMENT))) != 0):
                self.state = 90
                self.line()


            self.state = 93
            self.match(LogoTomaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(LogoTomaParser.CommandContext,0)


        def comment(self):
            return self.getTypedRuleContext(LogoTomaParser.CommentContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = LogoTomaParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LogoTomaParser.T__0, LogoTomaParser.T__3, LogoTomaParser.T__6, LogoTomaParser.T__7, LogoTomaParser.T__8, LogoTomaParser.T__9, LogoTomaParser.T__10, LogoTomaParser.T__11, LogoTomaParser.T__13, LogoTomaParser.T__15, LogoTomaParser.T__16, LogoTomaParser.T__19, LogoTomaParser.T__20, LogoTomaParser.T__21, LogoTomaParser.T__22, LogoTomaParser.T__23, LogoTomaParser.T__24, LogoTomaParser.T__25, LogoTomaParser.T__27, LogoTomaParser.T__28, LogoTomaParser.BOOL, LogoTomaParser.IDENTIFIER, LogoTomaParser.SIGN_OPERATORS, LogoTomaParser.NUMBER, LogoTomaParser.NEGATION_OPERATOR, LogoTomaParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.command()
                self.state = 97
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 96
                    self.comment()


                pass
            elif token in [LogoTomaParser.COMMENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def engine(self):
            return self.getTypedRuleContext(LogoTomaParser.EngineContext,0)


        def wheel(self):
            return self.getTypedRuleContext(LogoTomaParser.WheelContext,0)


        def spray(self):
            return self.getTypedRuleContext(LogoTomaParser.SprayContext,0)


        def spray_color(self):
            return self.getTypedRuleContext(LogoTomaParser.Spray_colorContext,0)


        def spray_size(self):
            return self.getTypedRuleContext(LogoTomaParser.Spray_sizeContext,0)


        def sleep(self):
            return self.getTypedRuleContext(LogoTomaParser.SleepContext,0)


        def cast(self):
            return self.getTypedRuleContext(LogoTomaParser.CastContext,0)


        def print(self):
            return self.getTypedRuleContext(LogoTomaParser.PrintContext,0)


        def function(self):
            return self.getTypedRuleContext(LogoTomaParser.FunctionContext,0)


        def f_call(self):
            return self.getTypedRuleContext(LogoTomaParser.F_callContext,0)


        def assign(self):
            return self.getTypedRuleContext(LogoTomaParser.AssignContext,0)


        def loope(self):
            return self.getTypedRuleContext(LogoTomaParser.LoopeContext,0)


        def ife(self):
            return self.getTypedRuleContext(LogoTomaParser.IfeContext,0)


        def whilee(self):
            return self.getTypedRuleContext(LogoTomaParser.WhileeContext,0)


        def save(self):
            return self.getTypedRuleContext(LogoTomaParser.SaveContext,0)


        def value(self):
            return self.getTypedRuleContext(LogoTomaParser.ValueContext,0)


        def hide(self):
            return self.getTypedRuleContext(LogoTomaParser.HideContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = LogoTomaParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.engine()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.wheel()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.spray()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.spray_color()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.spray_size()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.sleep()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.cast()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.print()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 110
                self.function()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 111
                self.f_call()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 112
                self.assign()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 113
                self.loope()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 114
                self.ife()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 115
                self.whilee()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 116
                self.save()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 117
                self.value()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 118
                self.hide()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LogoTomaParser.ExpressionContext,0)


        def logic_expression(self):
            return self.getTypedRuleContext(LogoTomaParser.Logic_expressionContext,0)


        def color(self):
            return self.getTypedRuleContext(LogoTomaParser.ColorContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = LogoTomaParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.logic_expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.color()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EngineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_expression(self):
            return self.getTypedRuleContext(LogoTomaParser.Logic_expressionContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_engine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEngine" ):
                listener.enterEngine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEngine" ):
                listener.exitEngine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEngine" ):
                return visitor.visitEngine(self)
            else:
                return visitor.visitChildren(self)




    def engine(self):

        localctx = LogoTomaParser.EngineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_engine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(LogoTomaParser.T__0)
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LogoTomaParser.T__1]:
                self.state = 127
                self.match(LogoTomaParser.T__1)
                pass
            elif token in [LogoTomaParser.T__2]:
                self.state = 128
                self.match(LogoTomaParser.T__2)
                pass
            elif token in [LogoTomaParser.T__11, LogoTomaParser.T__16, LogoTomaParser.BOOL, LogoTomaParser.IDENTIFIER, LogoTomaParser.SIGN_OPERATORS, LogoTomaParser.NUMBER, LogoTomaParser.NEGATION_OPERATOR, LogoTomaParser.STRING]:
                self.state = 129
                self.logic_expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WheelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_expression(self):
            return self.getTypedRuleContext(LogoTomaParser.Logic_expressionContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_wheel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWheel" ):
                listener.enterWheel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWheel" ):
                listener.exitWheel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWheel" ):
                return visitor.visitWheel(self)
            else:
                return visitor.visitChildren(self)




    def wheel(self):

        localctx = LogoTomaParser.WheelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_wheel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(LogoTomaParser.T__3)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LogoTomaParser.T__4]:
                self.state = 133
                self.match(LogoTomaParser.T__4)
                pass
            elif token in [LogoTomaParser.T__5]:
                self.state = 134
                self.match(LogoTomaParser.T__5)
                pass
            elif token in [LogoTomaParser.T__2]:
                self.state = 135
                self.match(LogoTomaParser.T__2)
                pass
            elif token in [LogoTomaParser.T__11, LogoTomaParser.T__16, LogoTomaParser.BOOL, LogoTomaParser.IDENTIFIER, LogoTomaParser.SIGN_OPERATORS, LogoTomaParser.NUMBER, LogoTomaParser.NEGATION_OPERATOR, LogoTomaParser.STRING]:
                self.state = 136
                self.logic_expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SprayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_expression(self):
            return self.getTypedRuleContext(LogoTomaParser.Logic_expressionContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_spray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpray" ):
                listener.enterSpray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpray" ):
                listener.exitSpray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpray" ):
                return visitor.visitSpray(self)
            else:
                return visitor.visitChildren(self)




    def spray(self):

        localctx = LogoTomaParser.SprayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_spray)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(LogoTomaParser.T__6)
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LogoTomaParser.T__1]:
                self.state = 140
                self.match(LogoTomaParser.T__1)
                pass
            elif token in [LogoTomaParser.T__2]:
                self.state = 141
                self.match(LogoTomaParser.T__2)
                pass
            elif token in [LogoTomaParser.T__11, LogoTomaParser.T__16, LogoTomaParser.BOOL, LogoTomaParser.IDENTIFIER, LogoTomaParser.SIGN_OPERATORS, LogoTomaParser.NUMBER, LogoTomaParser.NEGATION_OPERATOR, LogoTomaParser.STRING]:
                self.state = 142
                self.logic_expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Spray_colorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def color(self):
            return self.getTypedRuleContext(LogoTomaParser.ColorContext,0)


        def identifier(self):
            return self.getTypedRuleContext(LogoTomaParser.IdentifierContext,0)


        def f_call(self):
            return self.getTypedRuleContext(LogoTomaParser.F_callContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_spray_color

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpray_color" ):
                listener.enterSpray_color(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpray_color" ):
                listener.exitSpray_color(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpray_color" ):
                return visitor.visitSpray_color(self)
            else:
                return visitor.visitChildren(self)




    def spray_color(self):

        localctx = LogoTomaParser.Spray_colorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_spray_color)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(LogoTomaParser.T__7)
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 146
                self.color()
                pass

            elif la_ == 2:
                self.state = 147
                self.identifier()
                pass

            elif la_ == 3:
                self.state = 148
                self.f_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Spray_sizeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LogoTomaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_spray_size

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpray_size" ):
                listener.enterSpray_size(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpray_size" ):
                listener.exitSpray_size(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpray_size" ):
                return visitor.visitSpray_size(self)
            else:
                return visitor.visitChildren(self)




    def spray_size(self):

        localctx = LogoTomaParser.Spray_sizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_spray_size)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(LogoTomaParser.T__8)
            self.state = 152
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SleepContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LogoTomaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_sleep

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSleep" ):
                listener.enterSleep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSleep" ):
                listener.exitSleep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSleep" ):
                return visitor.visitSleep(self)
            else:
                return visitor.visitChildren(self)




    def sleep(self):

        localctx = LogoTomaParser.SleepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sleep)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(LogoTomaParser.T__9)
            self.state = 155
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HideContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_expression(self):
            return self.getTypedRuleContext(LogoTomaParser.Logic_expressionContext,0)


        def getRuleIndex(self):
            return LogoTomaParser.RULE_hide

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHide" ):
                listener.enterHide(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHide" ):
                listener.exitHide(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHide" ):
                return visitor.visitHide(self)
            else:
                return visitor.visitChildren(self)




    def hide(self):
